--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,6 @@
     background-color: #376ac0;
     padding: 15px 0;
     font-weight: bold;
-    border-radius: 5px;
   }
 }
 
@@ -45,7 +44,12 @@ h3 {
 }
 
 p {
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+a {
+  color: #f76239;
   font-weight: bold;
 }
 
