--- a/src/mobile.styles.scss
+++ b/src/mobile.styles.scss
@@ -2,28 +2,39 @@
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
   .intro-flex {
     flex-direction: column;
-    .intro-img {
-      margin-top: 30px;
-    }
     .intro-text {
       order: 2;
-      margin-top: 30px;
+      margin-top: 10px;
+      p {
+        font-size: 16px;
+        font-weight: 600;
+      }
       button {
-        margin-top: 10px;
+        margin-top: 5px;
         padding: 20px 0;
         width: 100%;
       }
     }
+    .intro-img {
+      margin-top: 90px;
+    }
   }
   // navbar styles
   .navbar {
+    position: fixed;
+    width: 100%;
+    height: 62px;
+    padding: 0;
+    backdrop-filter: saturate(180%) blur(20px);
+    background-color: rgba(255, 255, 255, 0.7);
     .logo {
-      width: 50px;
+      padding: 10px 6% 10px;
+      width: 40px;
     }
   }
 
   h1 {
-    font-size: 36px;
+    font-size: 32px;
   }
   h3 {
     font-size: 20px;
