--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+$grid-space-gap: 24px;
+$grid-space-gap-sm: 12px;
+$light-border: #eaeaea;
+$shadow-medium: 0 8px 30px rgba(0, 0, 0, 0.12);
+
 .intro-flex {
   display: flex;
   max-width: 1440px;
@@ -13,13 +18,19 @@
   padding: 2%;
   button {
     margin-top: 10px;
-    width: 200px;
     border: none;
     text-transform: uppercase;
     color: white;
     background-color: #376ac0;
-    padding: 15px 0;
+    box-shadow: 0 4px 14px 0 rgba(0, 118, 255, 0.39);
+    padding: 0 5.5rem;
+    border-radius: 7px;
+    height: 3rem;
     font-weight: bold;
+  }
+  button:hover {
+    background: rgba(0, 118, 255, 0.9);
+    box-shadow: 0 6px 20px rgba(0, 118, 255, 0.23);
   }
 }
 
@@ -32,37 +43,143 @@
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 80px;
+  // color: #376ac0;
   color: #376ac0;
   margin: 0;
+  line-height: 1;
+  letter-spacing: -0.07em;
+}
+
+h2 {
+  color: #376ac0;
+  font-weight: 700;
+  font-size: 3rem;
+  line-height: 1.3;
+  letter-spacing: -1px;
 }
 
 h3 {
-  font-size: 24px;
-  color: #f76239;
-  margin: 0;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #666;
 }
 
 p {
   font-size: 16px;
-  font-weight: bold;
+  color: #696969;
+  margin: 0;
 }
 
 a {
   color: #f76239;
   font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
+}
+button:focus {
+  outline: 0;
 }
 
 .nowrap {
   white-space: nowrap;
 }
 
+//work section styles
+
+.work-container {
+  text-align: center;
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 0 4%;
+}
+
+.showcase-container {
+  padding-top: $grid-space-gap-sm;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-gap: $light-border;
+  gap: $grid-space-gap-sm;
+  .work {
+    position: relative;
+    border: 1px solid $light-border;
+    padding: $grid-space-gap;
+    border-radius: 5px;
+    text-align: left;
+  }
+  .image-container {
+    max-height: 200px;
+    overflow: hidden;
+    margin-bottom: 10px;
+  }
+  img {
+    width: 100%;
+    border-radius: 5px;
+  }
+}
+
+//Projects container styles
+
+.projects-container {
+  text-align: center;
+  max-width: 1024px;
+  margin: 10% auto;
+  padding: 0 4%;
+}
+.projects-grid {
+  padding-top: $grid-space-gap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-gap: $light-border;
+  gap: $grid-space-gap;
+
+  .project {
+    border: 1px solid $light-border;
+    padding: $grid-space-gap;
+    border-radius: 5px;
+    text-align: left;
+    flex: 1 1;
+    display: flex;
+    flex-direction: column;
+    transition: box-shadow 0.2s ease, border 0.2s ease;
+    h3 {
+      font-weight: 600;
+      color: #111;
+      font-size: 1.2;
+    }
+    a {
+      margin: 10px 0;
+    }
+  }
+  .project:hover {
+    transition: box-shadow 0.2s ease;
+    box-shadow: $shadow-medium;
+    border: 1px solid transparent;
+  }
+}
+
 // Navbar styles
 .navbar {
+  z-index: 10000;
   max-width: 1440px;
   margin: 0 auto;
   padding: 20px 6% 10px;
   .logo {
     width: 75px;
   }
+}
+
+//gray section
+
+.gray-region {
+  margin: 10% auto;
+  padding: 6.25rem 0px;
+  background-color: rgb(250, 250, 250);
+  border-top: 1px solid rgb(234, 234, 234);
+  border-bottom: 1px solid rgb(234, 234, 234);
 }
